checker/tests/parsing/errors/var_with_struct.mft
fn f {
  operand X { v @ $x };
  returns Y { out: $x {} };
}
=== error ===
Unrecognized token `{` found at 53:54
Expected one of ",", "|" or "}"